# linux_configuration

./: .alias_extra  .aliases  .gitconfig  .vimrc  README.md  autoinstall.yaml  backupscript  discord_version_lock.settings.json  setupscript  vsc_extensions.txt
.ssh/: config
.sshrc.d/: .sshrc  .zshrc
aliases/: base  infra  odoo  system  templates
config/vsc_config/: odoo_snippets.code-snippets  odoo_snippets.code-snippets.file  snippets.json
extra_installs/: full.sh  install_discord.sh  install_pg_connector.sh  install_spotx.sh  set_default_editor.sh  terminal_dconf.sh
imp/: __init__.py
install/: base_installers  disk_resize  full  post_install  setup_stage2  setupscript
online_tools/tampermonkey/: goto_taskid.js  render_odoo_id.js
other-info/: cyberchef.txt  links_for_future_updates.txt
plugins/: alias-finder  git  see_also.txt
todo/: install_docker.sh  install_slack.sh  terminal_dconf.ini  terminal_dconf.sh
tools/: README.md  autocommit.py  checklist.sh  commit_tools.sh  commit_tools.sh.bak  mselect.sh  multitool.py
tools/multitool_builder/: main.py
tools/multitool_files/: .manifest.yml  autorb.py  instance_reset.py  multitool.py  (+3 more)
tools/multitool_lib/: __init__.py  build_config.py  helper.py  parser_generator.py  pyproject.toml  tool_exec.py
tools/multitool_lib/multitool_lib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tools/multitool_lib/yaml_constructors/: argument.py
vsc_config/: settings.json  snippets.json
work/: .gitconfig_work  .odoorc  extra_config  unfuck_db.sh
zsh_config/: .zshenv  .zshrc_wip  zsh_completion
(+77 files in other folders)
