[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "multitool_lib"
version = "0.1.0"
dependencies = [
    "pyyaml==6.0.3",
    "argcomplete==3.7.0",
]

[tool.setuptools.package-dir]
"multitool_lib" = "."

[tool.setuptools]
packages = [
    "multitool_lib",
    "multitool_lib.yaml_constructors",
]